--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -79,7 +79,7 @@
                 <li><span class="green-dot"></span><strong>Twilio WhatsApp</strong><br>Webhook endpoint active</li>
             </ul>
             <small>Webhook URL: 
-                <code>{{ url_for('webhook_whatsapp', _external=True) }}</code>
+                <code>https://malaysianacademicbot.onrender.com/webhook/whatsapp</code>
             </small>
         </div>
     </div>
